# ArithEval

./: CMakeLists.txt  Makefile  configure
src/: BackConverter.hh  CMakeLists.txt  Converter.hh  Expression.hh  Expression.hxx  Lexer.cc  Lexer.hh  Lexer.hxx  Makefile  Parser.cc  Parser.hh  Parser.hxx  Token.hh  backConvert.hh  convert.hh  converter.cc  converter.hh  lexer.cc  lexer.hh  macroRepeat.hh  main.cc  misc.cc  misc.hh  parser.cc  parser.hh  repeatMacro.hh  structfwd.hh  utils.cc  utils.hh
tests/: bistro_epita  check.py  moulinette.sh  test2
